force-app/main/default/objects/HP_Endpoint_Configuration__mdt/HP_Endpoint_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>HP Endpoint Configuration</label>
    <pluralLabel>HP Endpoint Configurations</pluralLabel>
</CustomObject>