force-app/main/default/objects/HP_Endpoint_Configuration__mdt/fields/ExpectedResponseCode__c.field-meta.xml
<CustomField>
    <fullName>ExpectedResponseCode__c</fullName>
    <label>ExpectedResponseCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>