force-app/main/default/objects/HP_Endpoint_Configuration__mdt/fields/Header_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Header_Mandatory__c</fullName>
    <label>Header Mandatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>