force-app/main/default/objects/HP_Endpoint_Configuration__mdt/fields/Is_API_Hour_Apigee__c.field-meta.xml
<CustomField>
    <fullName>Is_API_Hour_Apigee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is API Hour Apigee</label>
    <type>Checkbox</type>
</CustomField>