force-app/main/default/objects/HP_Endpoint_Configuration__mdt/fields/SaveLog__c.field-meta.xml
<CustomField>
    <fullName>SaveLog__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permet de sauvegarder les appels dans l&apos;objet log</description>
    <label>SaveLog</label>
    <type>Checkbox</type>
</CustomField>