force-app/main/default/objects/HP_Endpoint_Configuration__mdt/fields/Token_Needed__c.field-meta.xml
<CustomField>
    <fullName>Token_Needed__c</fullName>
    <description>Liste de token doit etre séparer par des point-virgules &apos;;&apos;</description>
    <label>Token Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>